--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,5 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/map"
-    tools:context=".Tracker"
+    tools:context=".GPSTracker"
     android:name="com.google.android.gms.maps.SupportMapFragment"/>
